# biblio

./: application.conf  biblio.cabal  inst.txt  mydocs.md  mysql.sql  rubyClient2.rb  stack.yaml  start
src/: .#Ware.hs  API.hs  AppConfig.hs  Docs.hs  Lib.hs  Server.hs  Typer.hs  Ware.hs
src/Auth/: AuthHeader.hs  DbAuth.hs
src/Convert/: BookConverter.hs  BookConvertor.hs  ItemConverter.hs  ShelfConverter.hs  UserConverter.hs  UserConvertor.hs
src/Db/: Book.hs  Common.hs  Item.hs  Shelf.hs  User.hs
src/Domain/: Book.hs  User.hs
src/Json/: Book.hs  Item.hs  Shelf.hs  User.hs
src/Logic/: Books.hs  Items.hs  Shelfs.hs  Users.hs
static/: app.js  bower.json  dev  index.html
static/ajax/: app.js  index.html
static/src/: Main.purs  Routes.purs  Todos.purs
static/vanilla/: api.js  app.js  index.html
