name:                biblio
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/biblio#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Auth.AuthHeader
                     , Auth.DbAuth
                     , AppConfig
                     , Db.Common                     
                     , Json.User
                     , Db.User
                     , Convert.UserConverter
                     , Logic.Books
                     , Logic.Users
                     , Json.Book
                     , Db.Book
                     , Convert.BookConverter
                     , Ware
                     , Typer
                     , API
                     , Server
                     
  build-depends:       base >= 4.7 && < 5
                     , Cabal
                     , HTTP
                     , word8
                     , aeson
                     , base64-bytestring
                     , bytestring
                     , configurator
                     , http-types
                     , mysql
                     , persistent
                     , persistent-template
                     , persistent-mysql
                     , resource-pool
                     , text
                     , utf8-string
                     , wai
                     , wai-middleware-static
                     , wai-extra
                     , wai-cors
                     , warp
                     , monad-logger
                     , MissingH
                     , transformers
                     , servant
                     , servant-server
                     , servant-js
                     , servant-docs
                     , servant-mock
                     , servant-client
                     , servant-swagger
                     , servant-swagger-ui
                     , http-client
                     , lackey
                     , mtl
                     , either
                     , filepath
                     , QuickCheck
                     , swagger2
                     , lens
  
  default-language:    Haskell2010

executable biblio-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , biblio                     
  default-language:    Haskell2010

test-suite biblio-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , biblio
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/biblio
